# raven

./: .gitignore  Cargo.toml  Dockerfile.server  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/raven-agent/: Cargo.toml
crates/raven-agent/src/: main.rs
crates/raven-proto/: Cargo.toml  build.rs
crates/raven-proto/src/: lib.rs
crates/raven-server/: Cargo.toml
crates/raven-server/src/: main.rs
dashboard/: package.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx
dashboard/src/components/: Layout.tsx
dashboard/src/pages/: AgentsPage.tsx  AlertsPage.tsx  HostDetailPage.tsx  LoginPage.tsx  LogsPage.tsx  SettingsPage.tsx
docs/: README.md  spec.md
proto/: raven.proto
