[workspace]
resolver = "2"
members = ["crates/raven-agent", "crates/raven-server", "crates/raven-proto"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/bakayu/raven"

[workspace.dependencies]
# runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# gRPC / Protobuf
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"

# HTTP
axum = { version = "0.8", features = ["ws"] }
reqwest = { version = "0.13", features = ["json"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
    "macros",
] }

# Auth
jsonwebtoken = "10"
argon2 = "0.5"

# Notifications
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-rustls-tls",
] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Agent-specific
procfs = "0.18"
inotify = "0.11"
glob = "0.3"
hostname = "0.4"

# Misc
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
dashmap = "6"
rand = "0.10"
thiserror = "2"
anyhow = "1"
config = "0.15"
