[package]
name = "raven-agent"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "raven-agent"
path = "src/main.rs"

[dependencies]
raven-proto = { path = "../raven-proto" }

tonic = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
hostname = { workspace = true }
