[package]
name = "raven-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "raven-server"
path = "src/main.rs"

[dependencies]
raven-proto = { path = "../raven-proto" }
tonic = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
